--- a/4-css入门/tutortial.css
+++ b/4-css入门/tutortial.css
@@ -7,3 +7,14 @@
 #female .b {
   color: red;
 }
+.list li {
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  font-family: "Microsoft YaHei";
+  list-style: none;
+  text-align: center;
+  border: 1px solid pink;
+}
