--- a/page/index.less
+++ b/page/index.less
@@ -5,50 +5,179 @@ body {
 
 [class*=section] {
   text-align: center;
+  position: relative;
 }
+.u-arrow-bottom{
+  position: absolute;
+  transform: scale(2);
+  width: 24px;
+  height: 14px;
+  left: 50%;
+  margin-left: -7px;
+  bottom: 20px;
+}
+.pre-wrap {
+  width: 24px;
+  height: 14px;
+  position: relative;
+  -webkit-animation: start 1.5s infinite ease-in-out;
+  -moz-animation: start 1.5s infinite ease-in-out;
+  animation: start 1.5s infinite ease-in-out
+}
+
+.pre-box1,.pre-box2 {
+  height: 15px;
+  width: 11px;
+  position: absolute;
+  top: -5px;
+  overflow: hidden
+}
+
+.pre-box2 {
+  left: 10px
+}
+
+.pre1,.pre2 {
+  width: 14px;
+  height: 5px;
+  position: absolute;
+  box-shadow: 1px -1px 1px #646464;
+  top: 5px
+}
+
+.pre1 {
+  transform: rotate(130deg);
+  -webkit-transform: rotate(130deg);
+  left: 1px;
+}
+
+.pre2 {
+  left: -4.5px;
+  -webkit-transform: rotate(50deg);
+  transform: rotate(50deg)
+}
+.pre1,.pre2,.pre3,.pre4 {
+  border-radius: 2px;
+  background-color: #fff
+}
+
+@-webkit-keyframes start {
+  0%,30% {
+    opacity: 0;
+    -webkit-transform: translate(0,30px)
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translate(0,100px)
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translate(0,-100px)
+  }
+}
+
+@-moz-keyframes start {
+  0%,30% {
+    opacity: 0;
+    -moz-transform: translate(0,30px)
+  }
+
+  60% {
+    opacity: 1;
+    -moz-transform: translate(0,100px)
+  }
+
+  100% {
+    opacity: 0;
+    -moz-transform: translate(0,-100px)
+  }
+}
+
+@keyframes start {
+  0%,30% {
+    opacity: 0;
+    transform: translate(0,0px)
+  }
+
+  60% {
+    opacity: 1;
+    transform: translate(0,-20px)
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(0,-30px)
+  }
+}
+
 
 .section1 {
   background-color: #1BBC9B;
-  .h1 {
-    font-size: 40px;
+  h1 {
+    color: black;
+    font-size: 70px;
+    span{
+      color: white;
+text-shadow: 7px 7px 1px #7BAABE;
+    }
   }
   font-size: 30px;
 }
 
 .section2 {
   background-color: #4BBFC3;
-  font-size: 30px;
+  h2{
+    font-size: 70px;
+  }
+
 }
 
 .section3 {
   background-color: #7BAABE;
   .title {
     text-align: center;
-    font-size: 50px;
+    font-size: 45px;
     font-weight: bold;
     margin-bottom: 30px;
+    span{
+      font-size: 60px;
+      color: white;
+    }
+  }
+  .question{
+    text-align: left;
+    font-size: 45px;
   }
   .desc {
     text-align: left;
-    font-size: 20px;
+    font-size: 40px;
     font-weight: bold;
     text-indent: 2em;
   }
   .list {
-    width: 60%;
+    width: 80%;
     text-align: left;
-    font-size: 35px;
+    font-size: 40px;
     font-weight: bold;
-    padding-left: 40px;
     padding-top: 50px;
-    color: white;
+    color: black;
+    span{
+      font-size: 50px;
+      color: white;
+    }
   }
   ul{
     text-align: left;
     font-weight: bold;
     //color: white;
-    font-size: 20px;
+    font-size: 35px;
     line-height: 2.5;
+    span{
+      font-size: 45px;
+      color: white;
+    }
   }
 }
 
@@ -64,25 +193,33 @@ body {
   }
   .desc {
     text-align: left;
-    font-size: 20px;
+    font-size: 35px;
     font-weight: bold;
     text-indent: 2em;
   }
   .list {
-    width: 60%;
+    width: 80%;
     text-align: left;
-    font-size: 35px;
+    font-size: 40px;
     font-weight: bold;
-    padding-left: 40px;
     padding-top: 50px;
     color: white;
+    span{
+      font-size: 50px;
+      font-weight: bold;
+      color: red;
+    }
   }
   ul{
     text-align: left;
     font-weight: bold;
     //color: white;
-    font-size: 20px;
+    font-size: 35px;
     line-height: 2.5;
+    span{
+      color: red;
+      font-size: 45px;
+    }
   }
 }
 
@@ -92,7 +229,7 @@ body {
   color: #444;
   .title {
     text-align: center;
-    font-size: 50px;
+    font-size: 60px;
     font-weight: bold;
     margin-bottom: 30px;
   }
@@ -105,9 +242,8 @@ body {
   .list {
     width: 60%;
     text-align: left;
-    font-size: 35px;
+    font-size: 70px;
     font-weight: bold;
-    padding-left: 40px;
     padding-top: 50px;
     color: white;
   }
@@ -115,10 +251,103 @@ body {
     text-align: left;
     font-weight: bold;
     color: black;
-    font-size: 20px;
+    font-size: 35px;
     line-height: 2.5;
+    span{
+      font-size: 45px;
+      color: white;
+    }
+  }
+}
+.section6{
+  background-color: lightblue;
+  .title{
+    font-size: 70px;
+    color: white;
+    text-shadow: 7px 7px 1px #2D7891;
+  }
+  table{
+    //color: white;
+    width: 80%;
+    font-weight: bold;
+    background-color: #72BBD3;
+    font-size: 30px;
+    margin: 0 auto;
+    text-align: left;
+    border-collapse: collapse;
+    /*.rowspan{
+      writing-mode: vertical-lr;
+    }*/
+    thead{
+      td{
+        font-size: 40px;
+        text-align: center;
+      }
+    }
+    td{
+      border: 1px solid black;
+    }
+  }
+}
+.section7{
+  background-color: #1AB394;
+  .title{
+    font-size: 60px;
+    color: white;
+    margin-bottom: 30px;
+  }
+  button{
+    background-color: #0F6655;
+    color: white;
+    width: 60%;
+    height: 15%;
+    font-size: 80px;
+    font-family: "Microsoft YaHei";
+    font-weight: bold;
+    border-radius: 2px;
+  }
+  .contact{
+    margin-top: 40px;
+    font-size: 45px;
   }
 }
 #fp-nav ul li a span, .fp-slidesNav ul li a span{
   background-color: #fff;
+}
+
+@media only screen and (min-device-width: 960px) {
+  .section3 {
+    .desc{
+      font-size: 30px;
+      /*font-weight: normal;*/
+    }
+    ul{
+      text-align: left;
+      font-weight: bold;
+      //color: white;
+      font-size: 30px;
+      line-height: 1.5;
+      span{
+        font-size: 40px;
+        color: white;
+      }
+    }
+  }
+  .section4 {
+    .desc{
+      font-size: 30px;
+      /*font-weight: normal;*/
+    }
+    ul{
+      line-height: 2;
+    }
+  }
+  .section5{
+    .list{
+      padding-top: 0px;
+    }
+    ul{
+      line-height: 2;
+    }
+  }
 }
