--- a/page/index.less
+++ b/page/index.less
@@ -6,6 +6,7 @@ body {
 [class*=section] {
   text-align: center;
   position: relative;
+  padding: 0px 35px;
 }
 .u-arrow-bottom{
   position: absolute;
@@ -260,7 +261,7 @@ text-shadow: 7px 7px 1px #7BAABE;
   }
 }
 .section6{
-  background-color: lightblue;
+  background-color: #22C3AA;
   .title{
     font-size: 70px;
     color: white;
@@ -271,13 +272,30 @@ text-shadow: 7px 7px 1px #7BAABE;
     width: 80%;
     font-weight: bold;
     background-color: #72BBD3;
+    background-color: #1AB394;
     font-size: 30px;
     margin: 0 auto;
     text-align: left;
     border-collapse: collapse;
-    /*.rowspan{
-      writing-mode: vertical-lr;
-    }*/
+    td:last-child{
+      font-weight: normal;
+    }
+    .rowspan{
+      color: white;
+      text-shadow: 1px 1px 1px #2D7891;
+    }
+    .first{
+      text-align: center;
+      color: lightyellow;
+    }
+    .second{
+      text-align: center;
+      color: darkred;
+    }
+    .third{
+      text-align: center;
+      color: black;
+    }
     thead{
       td{
         font-size: 40px;
