--- a/page/register.css
+++ b/page/register.css
@@ -7,6 +7,7 @@ body {
 }
 body .register {
   text-align: center;
+  padding: 0 30px;
 }
 body .register input {
   width: 60%;
@@ -18,11 +19,13 @@ body .register .tel {
   width: 60%;
 }
 body .register .submit {
-  width: 200px;
-  height: 50px;
+  width: 120px;
+  height: 40px;
   font-family: "Microsoft YaHei";
-  font-weight: bold;
-  font-size: 35px;
-  border-radius: 4px;
-  line-height: 50px;
+  font-weight: normal;
+  font-size: 25px;
+  border-radius: 2px;
+  background-color: lightblue;
+  border: none;
+  line-height: 40px;
 }
