--- a/page/register.less
+++ b/page/register.less
@@ -6,6 +6,7 @@ body{
   font-weight: bold;
   .register{
     text-align: center;
+    padding: 0 30px;
     input{
       width: 60%;
       height: 30px;
@@ -16,13 +17,15 @@ body{
       width: 60%;
     }
     .submit{
-      width: 200px;
-      height: 50px;
+      width: 120px;
+      height: 40px;
       font-family: "Microsoft YaHei";
-      font-weight: bold;
-      font-size: 35px;
-      border-radius: 4px;
-      line-height: 50px;
+      font-weight: normal;
+      font-size: 25px;
+      border-radius: 2px;
+      background-color: lightblue;
+      border: none;
+      line-height: 40px;
     }
   }
 }
