--- a/page/register.less
+++ b/page/register.less
@@ -8,13 +8,17 @@ body{
     text-align: center;
     padding: 0 30px;
     input{
-      width: 60%;
       height: 30px;
       vertical-align: middle;
-      font-size: 30px;
+
+    }
+    .name{
+      width: 60%;
+      font-size: 20px;
     }
     .tel{
       width: 60%;
+      font-size: 20px;
     }
     .submit{
       width: 120px;
@@ -28,4 +32,15 @@ body{
       line-height: 40px;
     }
   }
+}
+
+@media only screen and (min-device-width: 960px){
+  body{
+.register{
+  .name,.tel{
+    width: 200px;
+  }
+}
+  }
+
 }
