--- a/page/index.css
+++ b/page/index.css
@@ -8,8 +8,9 @@ body {
   padding: 0px 35px;
 }
 .u-arrow-bottom {
+  display: none;
   position: absolute;
-  transform: scale(2);
+  transform: scale(4);
   width: 24px;
   height: 14px;
   left: 50%;
@@ -63,46 +64,46 @@ body {
 @-webkit-keyframes start {
   0%,
   30% {
-    opacity: 0;
+    opacity: 0.5;
     -webkit-transform: translate(0, 30px);
   }
   60% {
     opacity: 1;
-    -webkit-transform: translate(0, 100px);
+    -webkit-transform: translate(0, 30px);
   }
   100% {
-    opacity: 0;
-    -webkit-transform: translate(0, -100px);
+    opacity: 0.5;
+    -webkit-transform: translate(0, -20px);
   }
 }
 @-moz-keyframes start {
   0%,
   30% {
-    opacity: 0;
+    opacity: 0.5;
     -moz-transform: translate(0, 30px);
   }
   60% {
     opacity: 1;
-    -moz-transform: translate(0, 100px);
+    -moz-transform: translate(0, 30px);
   }
   100% {
-    opacity: 0;
-    -moz-transform: translate(0, -100px);
+    opacity: 0.5;
+    -moz-transform: translate(0, -20px);
   }
 }
 @keyframes start {
   0%,
   30% {
-    opacity: 0;
-    transform: translate(0, 0px);
+    opacity: 0.5;
+    transform: translate(0, 30px);
   }
   60% {
     opacity: 1;
-    transform: translate(0, -20px);
+    transform: translate(0, 30px);
   }
   100% {
-    opacity: 0;
-    transform: translate(0, -30px);
+    opacity: 0.5;
+    transform: translate(0, -20px);
   }
 }
 .section1 {
@@ -142,12 +143,10 @@ body {
 }
 .section3 .desc {
   text-align: left;
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 30px;
   text-indent: 2em;
 }
 .section3 .list {
-  width: 80%;
   text-align: left;
   font-size: 40px;
   font-weight: bold;
@@ -162,7 +161,7 @@ body {
   text-align: left;
   font-weight: bold;
   font-size: 35px;
-  line-height: 2.5;
+  line-height: 1.5;
 }
 .section3 ul span {
   font-size: 45px;
@@ -181,28 +180,25 @@ body {
 }
 .section4 .desc {
   text-align: left;
-  font-size: 35px;
-  font-weight: bold;
+  font-size: 30px;
   text-indent: 2em;
 }
 .section4 .list {
-  width: 80%;
   text-align: left;
   font-size: 40px;
   font-weight: bold;
   padding-top: 50px;
-  color: white;
 }
 .section4 .list span {
   font-size: 50px;
   font-weight: bold;
-  color: red;
+  color: white;
 }
 .section4 ul {
   text-align: left;
   font-weight: bold;
   font-size: 35px;
-  line-height: 2.5;
+  line-height: 2;
 }
 .section4 ul span {
   color: red;
@@ -230,7 +226,6 @@ body {
   text-align: left;
   font-size: 70px;
   font-weight: bold;
-  padding-top: 50px;
   color: white;
 }
 .section5 ul {
@@ -238,7 +233,7 @@ body {
   font-weight: bold;
   color: black;
   font-size: 35px;
-  line-height: 2.5;
+  line-height: 2;
 }
 .section5 ul span {
   font-size: 45px;
@@ -253,36 +248,38 @@ body {
   text-shadow: 7px 7px 1px #2D7891;
 }
 .section6 table {
-  width: 80%;
+  width: 40%;
   font-weight: bold;
   background-color: #72BBD3;
   background-color: #1AB394;
-  font-size: 30px;
+  font-size: 20px;
   margin: 0 auto;
   text-align: left;
   border-collapse: collapse;
 }
 .section6 table td:last-child {
+  font-size: 20px;
   font-weight: normal;
 }
 .section6 table .rowspan {
-  color: white;
+  color: gold;
+  text-align: center;
   text-shadow: 1px 1px 1px #2D7891;
 }
 .section6 table .first {
   text-align: center;
-  color: lightyellow;
+  color: white;
 }
 .section6 table .second {
   text-align: center;
-  color: darkred;
+  color: white;
 }
 .section6 table .third {
   text-align: center;
-  color: black;
+  color: white;
 }
 .section6 table thead td {
-  font-size: 40px;
+  font-size: 20px;
   text-align: center;
 }
 .section6 table td {
@@ -292,7 +289,7 @@ body {
   background-color: #1AB394;
 }
 .section7 .title {
-  font-size: 60px;
+  font-size: 50px;
   color: white;
   margin-bottom: 30px;
 }
@@ -305,41 +302,98 @@ body {
   font-family: "Microsoft YaHei";
   font-weight: bold;
   border-radius: 2px;
+  cursor: pointer;
 }
 .section7 .contact {
   margin-top: 40px;
   font-size: 45px;
 }
+.section7 .contact span {
+  color: red;
+}
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
   background-color: #fff;
 }
-@media only screen and (min-device-width: 960px) {
+@media only screen and (max-device-width: 960px) {
+  div h1 h2 h3 span section ul li {
+    word-break: break-all;
+  }
+  .section3 {
+    font-size: 30px;
+  }
   .section3 .desc {
     font-size: 30px;
     /*font-weight: normal;*/
   }
+  .section3 .list {
+    width: 100%;
+    font-size: 40px;
+  }
   .section3 ul {
     text-align: left;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 1.5;
   }
   .section3 ul span {
-    font-size: 40px;
+    font-size: 35px;
     color: white;
   }
-  .section4 .desc {
+  .section4 {
+    background-color: #2B2B2B;
+    color: white;
     font-size: 30px;
-    /*font-weight: normal;*/
+  }
+  .section4 .title {
+    text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+  }
+  .section4 .desc {
+    text-align: left;
+    font-size: 30px;
+    text-indent: 2em;
+  }
+  .section4 .list {
+    text-align: left;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  .section4 .list span {
+    font-size: 45px;
+    font-weight: bold;
+    color: white;
   }
   .section4 ul {
-    line-height: 2;
+    text-align: left;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 1.6;
+  }
+  .section4 ul span {
+    color: red;
+    font-size: 45px;
+  }
+  .section5 {
+    font-size: 35px;
   }
   .section5 .list {
     padding-top: 0px;
   }
   .section5 ul {
+    font-size: 35px;
     line-height: 2;
+  }
+  .section6 table {
+    width: 80%;
+    font-size: 30px;
+  }
+  .section6 table td:last-child {
+    font-size: 25px;
+    font-weight: normal;
+  }
+  .u-arrow-bottom {
+    display: block;
   }
 }
