--- a/page2/page/register.less
+++ b/page2/page/register.less
@@ -1,26 +1,26 @@
-body{
+body {
   background-color: #1BBC9B;
   color: white;
   font-size: 20px;
   font-family: "Microsoft YaHei";
   font-weight: bold;
-  .register{
+  .register {
     text-align: center;
     padding: 0 30px;
-    input{
+    input {
       height: 30px;
       vertical-align: middle;
 
     }
-    .name{
+    .name {
       width: 60%;
       font-size: 20px;
     }
-    .tel{
+    .tel {
       width: 60%;
       font-size: 20px;
     }
-    .submit{
+    .submit {
       width: 120px;
       height: 40px;
       font-family: "Microsoft YaHei";
@@ -31,16 +31,18 @@ body{
       border: none;
       line-height: 40px;
     }
+    h1 {
+      font-size: 20px;
+    }
   }
 }
 
-@media only screen and (min-device-width: 960px){
-  body{
-.register{
-  .name,.tel{
-    width: 200px;
+@media only screen and (min-device-width: 960px) {
+  body {
+    .register {
+      .name, .tel {
+        width: 200px;
+      }
+    }
   }
-}
-  }
-
 }
