修复报名后不居中，主页联系方式换行

--- a/page2/page/register.less
+++ b/page2/page/register.less
@@ -1,12 +1,24 @@
+
+html{
+  height: 100%;
+}
 body {
   background-color: #1BBC9B;
+  height: 100%;
   color: white;
   font-size: 20px;
   font-family: "Microsoft YaHei";
   font-weight: bold;
+  #fullpage{
+    height: 100%;
+  }
   .register {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     padding: 0 30px;
+    height: 100%;
     input {
       height: 30px;
       vertical-align: middle;
