--- a/page2/page/register.css
+++ b/page2/page/register.css
@@ -1,13 +1,24 @@
+html {
+  height: 100%;
+}
 body {
   background-color: #1BBC9B;
+  height: 100%;
   color: white;
   font-size: 20px;
   font-family: "Microsoft YaHei";
   font-weight: bold;
 }
+body #fullpage {
+  height: 100%;
+}
 body .register {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 0 30px;
+  height: 100%;
 }
 body .register input {
   height: 30px;
