--- a/page2/page/register.less
+++ b/page2/page/register.less
@@ -3,45 +3,62 @@ html{
   height: 100%;
 }
 body {
-  background-color: #1BBC9B;
   height: 100%;
   color: white;
   font-size: 20px;
   font-family: "Microsoft YaHei";
   font-weight: bold;
+  margin: 0;
+  padding: 0;
+  background-image: url("./registerBg.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   #fullpage{
     height: 100%;
+    background-color: rgba(40, 57, 101, .9);
+
   }
   .register {
     display: flex !important;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
     padding: 0 30px;
     height: 100%;
+    box-sizing: border-box;
+    padding-bottom: 40px;
+    .desc{
+      text-align: left;
+      width: 80%;
+    }
     input {
       height: 30px;
       vertical-align: middle;
-
+      border: none;
+      padding: 5px 10px;
+      border-radius: 25px;
+      background: rgba(255,255,255,.1);
     }
     .name {
-      width: 60%;
+      width: 80%;
       font-size: 20px;
     }
     .tel {
-      width: 60%;
+      width: 80%;
       font-size: 20px;
     }
     .submit {
-      width: 120px;
-      height: 40px;
+      box-sizing: content-box;
+      width: 80%;
+      height: 30px;
       font-family: "Microsoft YaHei";
       font-weight: normal;
-      font-size: 25px;
-      border-radius: 2px;
-      background-color: lightblue;
+      font-size: 20px;
+      background: #1161ee;
       border: none;
-      line-height: 40px;
+      padding: 5px 10px;
+      border-radius: 25px;
+      color: #ffffff;
     }
     h1 {
       font-size: 20px;
